Removed unused imports and seperated 'Toggle Huds' from 'Hud Options' clickgui tab.
** TODO: Criticals is broken and will crash the game.